feat: Add request logging filter, file and string utilities, security configuration, and update the security audit report.